--- a/index.html
+++ b/index.html
@@ -43,18 +43,33 @@
       </div>
       <div class="ad1">
 
-      </div>      
+      </div>
     </section>
     <section class="ads-and-posts">
       <div class="ad2">
 
       </div>
+      <div class="article1">
+
+      </div>
+      <div class="article2">
+
+      </div>
+    </section>
+    <section class="ads-and-posts2">
+      <div class="article3">
+
+      </div>
+      <div class="article4">
+
+      </div>
       <div class="ad3">
 
       </div>
-      <div class="ad4">
+    </section>
 
-      </div>
+    <section class="main-ad">
+      
     </section>
   </main>
 
