added topics and person of the week

--- a/index.html
+++ b/index.html
@@ -31,45 +31,76 @@
 
       </div>
     </section>
-    <section class="latest-posts">
-      <div class="post1">
+    <div class="container">
+      <section class="latest-posts">
+        <div class="post1">
 
-      </div>
-      <div class="post2">
+        </div>
+        <div class="post2">
 
-      </div>
-      <div class="post3">
+        </div>
+        <div class="post3">
 
-      </div>
-      <div class="ad1">
+        </div>
+        <div class="ad1">
 
-      </div>
-    </section>
-    <section class="ads-and-posts">
-      <div class="ad2">
+        </div>
+      </section>
+      <section class="ads-and-posts">
+        <div class="ad2">
 
-      </div>
-      <div class="article1">
+        </div>
+        <div class="article1">
 
-      </div>
-      <div class="article2">
+        </div>
+        <div class="article2">
 
-      </div>
-    </section>
-    <section class="ads-and-posts2">
-      <div class="article3">
+        </div>
+      </section>
+      <section class="ads-and-posts2">
+        <div class="article3">
 
-      </div>
-      <div class="article4">
+        </div>
+        <div class="article4">
 
-      </div>
-      <div class="ad3">
+        </div>
+        <div class="ad3">
 
-      </div>
-    </section>
+        </div>
+      </section>
+    </div>
 
     <section class="main-ad">
-      
+
+    </section>
+
+    <article class="person-of-the-week">
+
+    </article>
+
+    <section class="topics-of-the-week1">
+      <div class="topic1">
+
+      </div>
+      <div class="topic2">
+
+      </div>
+    </section>
+    <section class="topics-of-the-week2">
+      <div class="topic3">
+
+      </div>
+      <div class="topic4">
+
+      </div>
+    </section>
+    <section class="topics-of-the-week3">
+      <div class="topic5">
+
+      </div>
+      <div class="topic6">
+
+      </div>
     </section>
   </main>
 
