make second ad, start guide and newsletter grid

--- a/index.html
+++ b/index.html
@@ -74,34 +74,58 @@
 
     </section>
 
-    <article class="person-of-the-week">
+    <div class="container">
+      <article class="person-of-the-week">
 
-    </article>
+      </article>
 
-    <section class="topics-of-the-week1">
-      <div class="topic1">
+      <section class="topics-of-the-week1">
+        <div class="topic1">
 
-      </div>
-      <div class="topic2">
+        </div>
+        <div class="topic2">
 
-      </div>
+        </div>
+      </section>
+      <section class="topics-of-the-week2">
+        <div class="topic3">
+
+        </div>
+        <div class="topic4">
+
+        </div>
+      </section>
+      <section class="topics-of-the-week3">
+        <div class="topic5">
+
+        </div>
+        <div class="topic6">
+
+        </div>
+      </section>
+    </div>
+
+    <section class="second-ad">
+
     </section>
-    <section class="topics-of-the-week2">
-      <div class="topic3">
 
-      </div>
-      <div class="topic4">
+    <div class="container">
+      <section class="guide-and-newsletter">
+        <div class="js-guide">
 
-      </div>
-    </section>
-    <section class="topics-of-the-week3">
-      <div class="topic5">
+        </div>
+        <div class="css-guide">
 
-      </div>
-      <div class="topic6">
+        </div>
+        <div class="web-guide">
 
-      </div>
-    </section>
+        </div>
+        <div class="newsletter">
+
+        </div>
+      </section>
+    </div>
+
   </main>
 
 </body>
