added latest news feature

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
     <section class="main-ad">
 
     </section>
+    
+    <div class="see-all-latest-articles">
+      
+    </div>
 
     <div class="container">
       <article class="person-of-the-week">
