add anchor tag for all latest articles

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
     
     <div class="see-all-latest-articles">
-      
+      <a>SEE ALL LATEST ARTICLES</a>
     </div>
 
     <div class="container">
