add in between, fix position

--- a/index.html
+++ b/index.html
@@ -45,36 +45,43 @@
         </div>
       </section>
       <section class="ads-and-posts">
+        <article class="article1">
+
+        </article>
         <div class="ad2">
 
         </div>
-        <div class="article1">
+        <article class="article2">
 
-        </div>
-        <div class="article2">
-
-        </div>
+        </article>
       </section>
       <section class="ads-and-posts2">
-        <div class="article3">
+        <article class="article3">
 
-        </div>
-        <div class="article4">
+        </article>
+        <article class="article4">
 
-        </div>
-        <div class="ad3">
+        </article>
+        <article class="article5">
 
-        </div>
+        </article>
       </section>
+      <div class="new-on-smash">
+
+      </div>
+    </div>
+
+
+
+    <div class="inbetween-container">    
+      <div class="see-all-latest-articles">
+  
+      </div>
     </div>
 
     <section class="main-ad">
 
     </section>
-    
-    <div class="see-all-latest-articles">
-      <a>SEE ALL LATEST ARTICLES</a>
-    </div>
 
     <div class="container">
       <article class="person-of-the-week">
@@ -107,6 +114,12 @@
       </section>
     </div>
 
+    <div class="inbetween-container">    
+      <div class="see-all-latest-articles">
+  
+      </div>
+    </div>
+
     <section class="second-ad">
 
     </section>
@@ -126,6 +139,12 @@
 
         </div>
       </section>
+    </div>
+
+    <div class="inbetween-container">    
+      <div class="see-all-latest-articles">
+  
+      </div>
     </div>
 
   </main>
