started adding elements to page

--- a/index.html
+++ b/index.html
@@ -6,86 +6,148 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smashing Magazine Heatmap</title>
   <link rel="stylesheet" href="styles/reset.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Marck+Script&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
   <header>
     <nav>
-      <p class="debug">lighthouse debug</p>
+      <div class="logo">
+
+      </div>
+      <ul>
+        <li><a href="#">Articles</a></li>
+        <li><a href="#">Guides</a></li>
+        <li><a href="#">Books</a></li>
+        <li><a href="#">Events</a></li>
+        <li><a href="#">Membership</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#"><button>
+              More
+            </button></a></li>
+      </ul>
+
+      <div class="search">
+
+      </div>
     </nav>
   </header>
 
   <main>
     <section class="author-wrote">
-      <div class="author1 ">
-
+      <div class="author1 text1">
+        <article>Lorem ipsum dolor sit amet, consectetur adipiscing</article>
       </div>
-      <div class="author2">
-
+      <div class="author2 text1">
+        <article>Lorem ipsum dolor sit amet, consectetur adipiscing</article>
       </div>
-      <div class="author3">
-
+      <div class="author3 text1">
+        <article>Lorem ipsum dolor sit amet, consectetur adipiscing</article>
       </div>
-      <div class="author4">
-
+      <div class="author4 text1">
+        <article>Lorem ipsum dolor sit amet, consectetur adipiscing</article>
       </div>
     </section>
 
     <div class="container">
       <section class="latest-posts">
-        <div class="post1">
-
+        <div class="post1 text2">
+          <h2>
+            This is a title
+          </h2>
+          <p>This isn't a title, it's actually a paragraph</p>
         </div>
-        <div class="post2">
-
+        <div class="post2 text2">
+          <h2>
+            This is a title
+          </h2>
+          <p>This isn't a title, it's actually a paragraph</p>
         </div>
-        <div class="post3">
-
+        <div class="post3 text2">
+          <h2>
+            This is a title
+          </h2>
+          <p>This isn't a title, it's actually a paragraph</p>
         </div>
       </section>
       <section class="ads-and-posts">
-        <article class="article1">
-
+        <article class="article1 text2">
+          <h2>
+            This is a title
+          </h2>
+          <p>This isn't a title, it's actually a paragraph</p>
         </article>
-        <div class="ad2">
-
+        <div class="ad2 text2">
+          <h2>
+            This is a title
+          </h2>
+          <p>This isn't a title, it's actually a paragraph</p>
         </div>
-        <article class="article2">
-
+        <article class="article2 text2">
+          <h2>
+            This is a title
+          </h2>
+          <p>This isn't a title, it's actually a paragraph</p>
         </article>
       </section>
       <section class="ads-and-posts2">
-        <article class="article3">
-
+        <article class="article3 text2">
+          <h2>
+            This is a title
+          </h2>
+          <p>This isn't a title, it's actually a paragraph</p>
         </article>
-        <article class="article4">
-
+        <article class="article4 text2">
+          <h2>
+            This is a title
+          </h2>
+          <p>This isn't a title, it's actually a paragraph</p>
         </article>
-        <article class="article5">
-
+        <article class="article5 text2">
+          <h2>
+            This is a title
+          </h2>
+          <p>This isn't a title, it's actually a paragraph</p>
         </article>
       </section>
-      <div class="new-on-smash">
-
+      <div class="new-on-smash text2">
+        <div class="content">
+          <h2>New on Smashing TV</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <button>Episodes</button>
+        </div>
       </div>
     </div>
 
 
 
-    <div class="inbetween-container">    
+    <div class="inbetween-container">
       <div class="see-all-latest-articles">
-  
+        <p>See all latest articles</p>
       </div>
     </div>
 
     <section class="main-ad">
-
+      <div class="main-thing">
+        <h2>Meet "Click!": Encourage Clicks Without Shady Tricks</h2>
+        <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </p>
+        <button>Jump to table of contents</button>
+      </div>
     </section>
 
     <div class="container">
       <article class="person-of-the-week">
-
+        <h3>PERSON OF THE WEEK</h3>
+        <p>Dan Mall is a creative director and advisor from Philly. As the founder and CEO of the design collaborative SuperFriendly, he helps in-house teams make better digital products with design systems. Dan is the author of the book Pricing Design and co-founder of SuperBooked, a service that helps you find work with a little help from your friends. He writes about design on danmall.me and shares his knowledge about building great digital products as a speaker. Thank you for everything you do for the community, dear Dan!</p>
       </article>
 
       <section class="topics-of-the-week1">
@@ -114,9 +176,9 @@
       </section>
     </div>
 
-    <div class="inbetween-container">    
+    <div class="inbetween-container">
       <div class="see-all-latest-articles">
-  
+
       </div>
     </div>
 
@@ -141,9 +203,9 @@
       </section>
     </div>
 
-    <div class="inbetween-container">    
+    <div class="inbetween-container">
       <div class="see-all-latest-articles">
-  
+
       </div>
     </div>
 
