added person of the week elements, and article

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Marck+Script&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -151,27 +152,33 @@
       </article>
 
       <section class="topics-of-the-week1">
-        <div class="topic1">
-
+        <div class="topic1 text3">
+          <h3>User-Friendly Data Tables</h3>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
         </div>
-        <div class="topic2">
-
+        <div class="topic2 text3">
+          <h3>User-Friendly Data Tables</h3>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
         </div>
       </section>
       <section class="topics-of-the-week2">
-        <div class="topic3">
-
+        <div class="topic3 text3">
+          <h3>User-Friendly Data Tables</h3>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
         </div>
-        <div class="topic4">
-
+        <div class="topic4 text3">
+          <h3>User-Friendly Data Tables</h3>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
         </div>
       </section>
       <section class="topics-of-the-week3">
-        <div class="topic5">
-
+        <div class="topic5 text3">
+          <h3>User-Friendly Data Tables</h3>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
         </div>
-        <div class="topic6">
-
+        <div class="topic6 text3">
+          <h3>User-Friendly Data Tables</h3>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
         </div>
       </section>
     </div>
