add main and second ad, add more elements to remaining boxes

--- a/index.html
+++ b/index.html
@@ -185,24 +185,35 @@
 
     <div class="inbetween-container">
       <div class="see-all-latest-articles">
-
+        <p>MORE LINKS ON TWITTER</p>
       </div>
     </div>
 
     <section class="second-ad">
-
+      <h2>Design Systems</h2>
+      <p>Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how to set up an effective design system to create great digital products. With common traps, gotchas and lessons learned.</p>
+      <button>Jump to table of contents</button>
     </section>
 
     <div class="container">
       <section class="guide-and-newsletter">
-        <div class="js-guide">
-
+        <div class="example-guide">
+          <h4>A SMASHING GUIDE TO</h4>
+          <h3>CSS Layout</h3>
+          <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this new world. If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help. </p>
+          <button>Explore CSS Layout</button>
         </div>
-        <div class="css-guide">
-
+        <div class="example-guide">
+          <h4>A SMASHING GUIDE TO</h4>
+          <h3>CSS Layout</h3>
+          <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this new world. If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help. </p>
+          <button>Explore CSS Layout</button>
         </div>
-        <div class="web-guide">
-
+        <div class="example-guide">
+          <h4>A SMASHING GUIDE TO</h4>
+          <h3>CSS Layout</h3>
+          <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this new world. If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help. </p>
+          <button>Explore CSS Layout</button>
         </div>
         <div class="newsletter">
 
