add elements to footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Marck+Script&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -123,7 +124,8 @@
       <div class="new-on-smash text2">
         <div class="content">
           <h2>New on Smashing TV</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua.</p>
           <button>Episodes</button>
         </div>
       </div>
@@ -148,37 +150,53 @@
     <div class="container">
       <article class="person-of-the-week">
         <h3>PERSON OF THE WEEK</h3>
-        <p>Dan Mall is a creative director and advisor from Philly. As the founder and CEO of the design collaborative SuperFriendly, he helps in-house teams make better digital products with design systems. Dan is the author of the book Pricing Design and co-founder of SuperBooked, a service that helps you find work with a little help from your friends. He writes about design on danmall.me and shares his knowledge about building great digital products as a speaker. Thank you for everything you do for the community, dear Dan!</p>
+        <p>Dan Mall is a creative director and advisor from Philly. As the founder and CEO of the design collaborative
+          SuperFriendly, he helps in-house teams make better digital products with design systems. Dan is the author of
+          the book Pricing Design and co-founder of SuperBooked, a service that helps you find work with a little help
+          from your friends. He writes about design on danmall.me and shares his knowledge about building great digital
+          products as a speaker. Thank you for everything you do for the community, dear Dan!</p>
       </article>
 
       <section class="topics-of-the-week1">
         <div class="topic1 text3">
           <h3>User-Friendly Data Tables</h3>
-          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening,
+            Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.
+          </p>
         </div>
         <div class="topic2 text3">
           <h3>User-Friendly Data Tables</h3>
-          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening,
+            Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.
+          </p>
         </div>
       </section>
       <section class="topics-of-the-week2">
         <div class="topic3 text3">
           <h3>User-Friendly Data Tables</h3>
-          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening,
+            Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.
+          </p>
         </div>
         <div class="topic4 text3">
           <h3>User-Friendly Data Tables</h3>
-          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening,
+            Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.
+          </p>
         </div>
       </section>
       <section class="topics-of-the-week3">
         <div class="topic5 text3">
           <h3>User-Friendly Data Tables</h3>
-          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening,
+            Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.
+          </p>
         </div>
         <div class="topic6 text3">
           <h3>User-Friendly Data Tables</h3>
-          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening, Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.</p>
+          <p>october 27, 2020 — Data tables can turn into your worst UX nightmare. To prevent that from happening,
+            Meredith Meller summarized tips to help make your tables user-friendly even when they include a lot of data.
+          </p>
         </div>
       </section>
     </div>
@@ -191,7 +209,8 @@
 
     <section class="second-ad">
       <h2>Design Systems</h2>
-      <p>Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how to set up an effective design system to create great digital products. With common traps, gotchas and lessons learned.</p>
+      <p>Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how to set up an effective design
+        system to create great digital products. With common traps, gotchas and lessons learned.</p>
       <button>Jump to table of contents</button>
     </section>
 
@@ -200,37 +219,86 @@
         <div class="example-guide">
           <h4>A SMASHING GUIDE TO</h4>
           <h3>CSS Layout</h3>
-          <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this new world. If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help. </p>
-          <button>Explore CSS Layout</button>
+          <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this
+            new world. If you want to understand the technical details, or learn how to use new CSS creatively, these
+            guides can help. </p>
+          <button class="main-button">Explore CSS Layout</button>
         </div>
         <div class="example-guide">
           <h4>A SMASHING GUIDE TO</h4>
           <h3>CSS Layout</h3>
-          <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this new world. If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help. </p>
-          <button>Explore CSS Layout</button>
+          <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this
+            new world. If you want to understand the technical details, or learn how to use new CSS creatively, these
+            guides can help. </p>
+          <button class="main-button">Explore CSS Layout</button>
         </div>
         <div class="example-guide">
           <h4>A SMASHING GUIDE TO</h4>
           <h3>CSS Layout</h3>
-          <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this new world. If you want to understand the technical details, or learn how to use new CSS creatively, these guides can help. </p>
-          <button>Explore CSS Layout</button>
+          <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this
+            new world. If you want to understand the technical details, or learn how to use new CSS creatively, these
+            guides can help. </p>
+          <button class="main-button">Explore CSS Layout</button>
         </div>
-        <div class="newsletter">
-
+        <div class="newsletter example-guide">
+          <h3>Email Newsletter</h3>
+          <p>Every Tuesday, we send an email newsletter with useful techniques on front-end & UX. Subscribe and get a
+            freebie: Smart Interface Design Checklists PDF — right in your inbox.</p>
+          <div class="pseudo-form">
+            <div></div>
+              <button class="small-buttom">Meow</button>            
+          </div>
         </div>
       </section>
     </div>
 
     <div class="inbetween-container">
       <div class="see-all-latest-articles">
-
+        <p>See All Guides</p>
       </div>
     </div>
 
   </main>
 
   <footer>
-
+    <div class="browse-all">
+      <h3>BROWSE ALL SMASHING MAGAZINE TOPICS</h3>
+      <nav>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+        <a href="#">Topic</a>
+      </nav>
+    </div>
   </footer>
 
 </body>
