cleaned up linters

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <li><a href="#">Events</a></li>
         <li><a href="#">Membership</a></li>
         <li><a href="#">Jobs</a></li>
-        <li><a href="#"><button>
+        <li><button type="button"><a href="#">
               More
-            </button></a></li>
+            </a></button></li>
       </ul>
 
       <div class="search">
@@ -126,7 +126,7 @@
           <h2>New on Smashing TV</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua.</p>
-          <button>Episodes</button>
+          <button type="button">Episodes</button>
         </div>
       </div>
     </div>
@@ -143,7 +143,7 @@
       <div class="main-thing">
         <h2>Meet "Click!": Encourage Clicks Without Shady Tricks</h2>
         <p>Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </p>
-        <button>Jump to table of contents</button>
+        <button type="button">Jump to table of contents</button>
       </div>
     </section>
 
@@ -222,7 +222,7 @@
           <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this
             new world. If you want to understand the technical details, or learn how to use new CSS creatively, these
             guides can help. </p>
-          <button class="main-button">Explore CSS Layout</button>
+          <button class="main-button" type="button">Explore CSS Layout</button>
         </div>
         <div class="example-guide">
           <h4>A SMASHING GUIDE TO</h4>
@@ -230,7 +230,7 @@
           <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this
             new world. If you want to understand the technical details, or learn how to use new CSS creatively, these
             guides can help. </p>
-          <button class="main-button">Explore CSS Layout</button>
+          <button class="main-button" type="button" type="button">Explore CSS Layout</button>
         </div>
         <div class="example-guide">
           <h4>A SMASHING GUIDE TO</h4>
@@ -238,7 +238,7 @@
           <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this
             new world. If you want to understand the technical details, or learn how to use new CSS creatively, these
             guides can help. </p>
-          <button class="main-button">Explore CSS Layout</button>
+          <button class="main-button" type="button">Explore CSS Layout</button>
         </div>
         <div class="newsletter example-guide">
           <h3>Email Newsletter</h3>
@@ -246,7 +246,7 @@
             freebie: Smart Interface Design Checklists PDF — right in your inbox.</p>
           <div class="pseudo-form">
             <div></div>
-              <button class="small-buttom">Meow</button>            
+              <button class="small-buttom" type="button">Meow</button>            
           </div>
         </div>
       </section>
