--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <li><a href="#">Events</a></li>
         <li><a href="#">Membership</a></li>
         <li><a href="#">Jobs</a></li>
-        <li><button type="button"><a href="#">
+        <li><button type="button">
               More
-            </a></button></li>
+            </button></li>
       </ul>
 
       <div class="search">
@@ -211,7 +211,7 @@
       <h2>Design Systems</h2>
       <p>Meet Design Systems, a recent Smashing book in which Alla Kholmatova explores how to set up an effective design
         system to create great digital products. With common traps, gotchas and lessons learned.</p>
-      <button>Jump to table of contents</button>
+      <button type="button">Jump to table of contents</button>
     </section>
 
     <div class="container">
@@ -230,7 +230,7 @@
           <p>CSS Layout has been transformed over the past years. We have you covered with all you need to master this
             new world. If you want to understand the technical details, or learn how to use new CSS creatively, these
             guides can help. </p>
-          <button class="main-button" type="button" type="button">Explore CSS Layout</button>
+          <button class="main-button" type="button">Explore CSS Layout</button>
         </div>
         <div class="example-guide">
           <h4>A SMASHING GUIDE TO</h4>
